--- a/olympics/golds.html
+++ b/olympics/golds.html
@@ -53,6 +53,10 @@ for(i=0;i<dataFiles.length;i++){
     var newButton = jQuery('<input/>').attr( { type:"button", class:"button", value:"Golds Awarded", onclick:"document.location.href = 'golds.html'" } );
     newButton.appendTo($("#buttons"));
 
+      var newButton = jQuery('<input/>').attr( { type:"button", class:"button", value:"Sport Dominance", onclick:"document.location.href = 'dominance.html'" } );
+  
+      newButton.appendTo($("#buttons"));
+
       var files = [
         ['medalsSports.json']
       ];
