--- a/olympics/dominance.html
+++ b/olympics/dominance.html
@@ -50,54 +50,65 @@
 
 
         var colours = [
-          ["United States","#3F51B5"],
-          ["Great Britain","#1A237E"],
-          ["China","#B71C1C"],
-          ["Russia","#F44336"],
-          ["Germany","#E91E63"],
-          ["Japan","#880E4F"],
-          ["France","#9C27B0"],
-          ["Italy","#4A148C"],
-          ["South Korea","#673AB7"],
-          ["Australia","#FFEB3B"],
-          ["Hungary","#311B92"],
-          ["Netherlands","#FF9800"],
-          ["Spain","#2196F3"],
-          ["Kazakhstan","#0D47A1"],
-          ["Colombia","#03A9F4"],
-          ["New Zealand","#01579B"],
-          ["Belgium","#00BCD4"],
-          ["Thailand","#006064"],
-          ["Croatia","#009688"],
-          ["Iran","#004D40"],
-          ["Jamaica","#4CAF50"],
-          ["Canada","#1B5E20"],
-          ["Switzerland","#8BC34A"],
-          ["Sweden","#33691E"],
-          ["Denmark","#CDDC39"],
-          ["South Africa","#827717"],
-          ["Brazil","#F57F17"],
-          ["Belarus","#FFC107"],
-          ["Kenya","#FF6F00"],
-          ["Cuba","#E65100"],
-          ["Poland","#FF5722"],
-          ["Romania","#BF360C"],
-          ["Slovenia","#795548"],
           ["Argentina","#3E2723"],
-          ["Slovakia","#9E9E9E"],
-          ["Vietnam","#212121"],
-          ["Czech Republic","#607D8B"],
-          ["Uzbekistan","#263238"],
-          ["Ethiopia","#3F51B5"],
+          ["Armenia","#FFEB3B"],
+          ["Australia","#FFEB3B"],
+          ["Azerbaijan","#03A9F4"],
+          ["Bahamas","#CDDC39"],
+          ["Bahrain","#FFEB3B"],
+          ["Belarus","#FFC107"],
+          ["Belgium","#00BCD4"],
+          ["Brazil","#F57F17"],
+          ["Canada","#1B5E20"],
+          ["China","#B71C1C"],
           ["Chinese Taipei","#B71C1C"],
-          ["Greece","#1A237E"],
-          ["Independent Olympic Athletes","#F44336"],
+          ["Colombia","#03A9F4"],
+          ["Croatia","#009688"],
+          ["Cuba","#E65100"],
+          ["Czech Republic","#607D8B"],
+          ["Denmark","#CDDC39"],
+          ["Ethiopia","#3F51B5"],
           ["Fiji","#880E4F"],
+          ["France","#9C27B0"],
+          ["Germany","#E91E63"],
+          ["Georgia","#F44336"],
+          ["Great Britain","#1A237E"],
+          ["Greece","#1A237E"],
+          ["Hungary","#311B92"],
+          ["Independent Olympic Athletes","#F44336"],
+          ["Indonesia","#E91E63"],
+          ["Iran","#FF6F00"],
+          ["Italy","#4A148C"],
+          ["Ivory Coast","#CDDC39"],
+          ["Jamaica","#4CAF50"],
+          ["Japan","#880E4F"],
+          ["Jordan","#9C27B0"],
+          ["Kazakhstan","#0D47A1"],
+          ["Kenya","#FF6F00"],
           ["Kosovo","#9C27B0"],
-          ["Puerto Rico","#FFEB3B"],
-          ["Singapore","#01579B"],
+          ["Netherlands","#FF9800"],
+          ["New Zealand","#01579B"],
           ["North Korea","#004D40"],
-          ["Ivory Coast","#CDDC39"]
+          ["Poland","#FF5722"],
+          ["Puerto Rico","#FFEB3B"],
+          ["Romania","#BF360C"],
+          ["Russia","#F44336"],
+          ["Serbia","#8BC34A"],
+          ["Singapore","#8BC34A"],
+          ["Slovakia","#9E9E9E"],
+          ["Slovenia","#795548"],
+          ["South Africa","#827717"],
+          ["South Korea","#673AB7"],
+          ["Spain","#2196F3"],
+          ["Sweden","#33691E"],
+          ["Switzerland","#8BC34A"],
+          ["Tajikistan","#006064"],
+          ["Thailand","#006064"],
+          ["Turkey","#004D40"],
+          ["Ukraine","#B71C1C"],
+          ["United States","#3F51B5"],
+          ["Uzbekistan","#263238"],
+          ["Vietnam","#212121"]
         ];
 
 
