add olympics to home page

--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
 				<h2>Personal Projects</h2>
 			</div>
 			<div class="project">
+				<div class="projectTitle"><h3>Olympics 2016</h3></div>
+				<div class="projectDesc">
+					<a href="/olympics/" target="olympics"><img src="images/olympics.png" /></a>
+					<p>A selection of data visualisations from the <a href="/olympics/" target="olympics">2016 Summer Olympics</a>.</p>
+					<p>Data was either manually collected from wikipedia or scraped in real time from the BBC medal table and then stored in MySQL and formatted to CSV or JSON files.</p>
+					<p>The visualisations were built using D3.js and JQuery using some of Mike Bostock's excellent <a href="https://bl.ocks.org/mbostock" target="d3">examples</a> as a starting point.</p>
+				</div>
+			</div>
+			<div class="project">
 				<div class="projectTitle"><h3>The Cocktail Menu</h3></div>
 				<div class="projectDesc">
 					<a href="/cocktails/" target="cocktails"><img src="images/cocktails.png" /></a>
