--- a/got/index.html
+++ b/got/index.html
@@ -10,10 +10,12 @@
 		<meta property="og:image" content="http://www.andybarefoot.com/got/images/fb-got-deaths.png" />
 
 		<link href="https://fonts.googleapis.com/css?family=Trirong:100,200" rel="stylesheet">
-
+	    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+		<script src="/jscript/analyticstracking.js"></script>
 		<script src="/jscript/d3.v4.min.js"></script>
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<link rel="stylesheet" href="../css/reset.css">
+		<link rel="stylesheet" href="/css/reset.css">
+		<link rel="stylesheet" href="/css/footer.css">
 		<link rel="stylesheet" href="deaths.css">
    </head>
 	<body>
@@ -27,12 +29,16 @@
 				<a href="javascript:closePopup()">X</a>
 			</div>
 		</div>
+		<div id="header">
+			<img id="titleImg" src="../../got/images/valar-morghulis.png" alt="Valar Morghulis: All men must die" />
+			<h1>A guide to who has killed who in Game of Thrones</h1>
+			<p>In Game of Thrones  it's true that "Valar Morghulis" but when over 200 characters have already gone to meet The Seven (or The Old Gods, or The Drowned God, or The Many-Faced God, or The Lord of Light, or the Great Stallion, or the Black Goat) then it gets hard to keep track of the tragedy.</p>
+			<p>Fortunately <a href="http://www.andybarefoot.com">Maester Barefoot</a> has been documenting the deceased and below you will find the results of his labour. A kind of "butchery tree" if you like, showing every death whether violent, very violent or extremely violent.</p>
+			<p>All data and images from the excellent <a href="http://gameofthrones.wikia.com/wiki/Game_of_Thrones_Wiki" target="_blank">Game of Thrones wiki</a>.</p>
+		</div>
+		<div id="mainContent">
+		</div>
 
-		<img id="titleImg" src="../../got/images/valar-morghulis.png" alt="Valar Morghulis: All men must die" />
-		<h1>A guide to who has killed who in Game of Thrones</h1>
-		<p>In Game of Thrones  it's true that "Valar Morghulis" but when over 200 characters have already gone to meet The Seven (or The Old Gods, or The Drowned God, or The Many-Faced God, or The Lord of Light, or the Great Stallion, or the Black Goat) then it gets hard to keep track of the tragedy.</p>
-		<p>Fortunately <a href="http://www.andybarefoot.com">Maester Barefoot</a> has been documenting the deceased and below you will find the results of his labour. A kind of "butchery tree" if you like, showing every death whether violent, very violent or extremely violent.</p>
-		<p>All data and images from the excellent <a href="http://gameofthrones.wikia.com/wiki/Game_of_Thrones_Wiki" target="_blank">Game of Thrones wiki</a>.</p>
 
 		<script>
 			// ESTABLISH PARAMETERS
@@ -147,7 +153,7 @@
 				$("svg").remove();
 				// CREATE CHART
 				// CREATE SVG
-				var svg = d3.select("body")
+				var svg = d3.select("#mainContent")
 	            .append("svg")
 	            .attr("width", w)
 	            .attr("height", h);
@@ -305,5 +311,21 @@
 			$(window).resize(drawChart);
 			$( document ).ready(drawChart);
 		</script>
+<!-- FOOTER: Requires footer.css & Open Sans font to be included -->
+     <div id="barefoot-footer">
+        <div id="barefoot-home-links">
+          <a href="/">Andy Barefoot</a> > Valar Morghulis
+        </div>
+        <div id="barefoot-social-links">
+          <ul>
+            <li><a href="https://www.linkedin.com/in/andybarefoot/" target="_blank"><img src="/images/icons/png32/linkedin.png"></a></li>
+            <li><a href="mailto:andy@andybarefoot.com"><img src="/images/icons/png32/email.png"></a></li>
+            <li><a href="http://instagram.com/andybarefoot" target="_blank"><img src="/images/icons/png32/instagram.png"></a></li>
+            <li><a href="http://twitter.com/andybarefoot" target="_blank"><img src="/images/icons/png32/twitter.png"></a></li>
+            <li><a href="http://www.facebook.com/profile.php?id=729980577" target="_blank"><img src="/images/icons/png32/facebook.png"></a></li>
+          </ul>
+        </div>
+      </div>
+<!-- END FOOTER -->
 	</body>
 </html>
