--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 		<meta name="viewport" content="initial-scale=1.0, width=device-width" />		
 		<title>Andy Barefoot</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-		<script src="jscript/imagesloaded.pkgd.min.js"></script>
-		<script src="jscript/masonry.pkgd.min.js"></script>
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/main-r.css">
 		<meta charset="utf-8" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+		<script src="/jscript/analyticstracking.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+		<script src="jscript/imagesloaded.pkgd.min.js"></script>
+		<script src="jscript/masonry.pkgd.min.js"></script>
         <script src="//code.angularjs.org/1.3.0-rc.1/angular.min.js"></script>
         <script src="jscript/angular-masonry.min.js"></script>
         <script src="jscript/andybarefoot.js"></script>
