--- a/olympics/index.html
+++ b/olympics/index.html
@@ -9,9 +9,11 @@
     <meta property="og:description" content="Data visualisations of some key numbers from the 2016 Summer olympics." />
     <meta property="og:image" content="http://www.andybarefoot.com/olympics/images/fb-olympics.png" />
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="olympics.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="css/olympics.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+    <script src="/jscript/analyticstracking.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="/jscript/d3.v3.min.js"></script>
     </head>
@@ -44,14 +46,14 @@ function getColour(cont){
 }
 
 var dataFiles = [
-    ['csv/compsTotal.csv','Competitors','The number of athletes each nation has sent to the Olympic Games.','competitors'],
-    ['csv/medalsTotal.csv','Medals','The total number of medals each nation has won so far.','medals'],
-    ['csv/golds.csv','Gold Medals','The total number of gold medals each nation has won so far.','gold-medals'],
-    ['csv/sporty.csv','Participation','The number of competitors each nation sent to the Olympics per million of population.','participation'],
-    ['csv/efficiency.csv','Medal Efficiency','The number of medals each nation has won per 100 competitors they sent.','medal-efficiency'],
-    ['csv/goldEfficiency.csv','Gold Efficiency','The number of gold medals each nation has won per 100 competitors they sent.','gold-efficiency'],
-    ['csv/talented.csv','Population Talent','The number of medals each nation has won per million of population.','population-talent'],
-    ['csv/goldTalent.csv','Gold Talent','The number of gold medals each nation has won per million of population.','gold-talent']
+    ['data/compsTotal.csv','Competitors','The number of athletes each nation has sent to the Olympic Games.','competitors'],
+    ['data/medalsTotal.csv','Medals','The total number of medals each nation has won so far.','medals'],
+    ['data/golds.csv','Gold Medals','The total number of gold medals each nation has won so far.','gold-medals'],
+    ['data/sporty.csv','Participation','The number of competitors each nation sent to the Olympics per million of population.','participation'],
+    ['data/efficiency.csv','Medal Efficiency','The number of medals each nation has won per 100 competitors they sent.','medal-efficiency'],
+    ['data/goldEfficiency.csv','Gold Efficiency','The number of gold medals each nation has won per 100 competitors they sent.','gold-efficiency'],
+    ['data/talented.csv','Population Talent','The number of medals each nation has won per million of population.','population-talent'],
+    ['data/goldTalent.csv','Gold Talent','The number of gold medals each nation has won per million of population.','gold-talent']
 ]
 
 var colours = [
@@ -241,19 +243,21 @@ if(window.location.hash) {
 
 
 </script>
-  <div id="barefoot-footer">
-    <div id="barefoot-home-links">
-      <a href="/">Andy Barefoot</a> > Olympics
-    </div>
-    <div id="barefoot-social-links">
-      <ul>
-        <li><a href="https://www.linkedin.com/in/andybarefoot/" target="_blank"><img src="/images/icons/png32/linkedin.png"></a></li>
-        <li><a href="mailto:andy@andybarefoot.com"><img src="/images/icons/png32/email.png"></a></li>
-        <li><a href="http://instagram.com/andybarefoot" target="_blank"><img src="/images/icons/png32/instagram.png"></a></li>
-        <li><a href="http://twitter.com/andybarefoot" target="_blank"><img src="/images/icons/png32/twitter.png"></a></li>
-        <li><a href="http://www.facebook.com/profile.php?id=729980577" target="_blank"><img src="/images/icons/png32/facebook.png"></a></li>
-      </ul>
-    </div>
-  </div>
+<!-- FOOTER: Requires footer.css & Open Sans font to be included -->
+      <div id="barefoot-footer">
+        <div id="barefoot-home-links">
+          <a href="/">Andy Barefoot</a> > Olympics
+        </div>
+        <div id="barefoot-social-links">
+          <ul>
+            <li><a href="https://www.linkedin.com/in/andybarefoot/" target="_blank"><img src="/images/icons/png32/linkedin.png"></a></li>
+            <li><a href="mailto:andy@andybarefoot.com"><img src="/images/icons/png32/email.png"></a></li>
+            <li><a href="http://instagram.com/andybarefoot" target="_blank"><img src="/images/icons/png32/instagram.png"></a></li>
+            <li><a href="http://twitter.com/andybarefoot" target="_blank"><img src="/images/icons/png32/twitter.png"></a></li>
+            <li><a href="http://www.facebook.com/profile.php?id=729980577" target="_blank"><img src="/images/icons/png32/facebook.png"></a></li>
+          </ul>
+        </div>
+      </div>
+<!-- END FOOTER -->
 </body>
 </html>
