decathlon missing link

--- a/olympics/decathlon.html
+++ b/olympics/decathlon.html
@@ -40,7 +40,8 @@
         var otherPages = [
         ['golds.html','Golds Awarded'],
         ['dominance.html','Sport Dominance'],
-        ['decathlon.html','Decathlon']
+        ['decathlon.html','Decathlon'],
+        ['heptathlon.html','Heptathlon']
         ]
 
         for(i=0;i<dataFiles.length;i++){
