--- a/football/index.html
+++ b/football/index.html
@@ -27,10 +27,15 @@
         <p>Starting from the very first international game between Scotland and England the reigning World Champions retain their crown only until the next match they lose, at which point the title transfers to their victorious opponents.</p>
         <p>This magnificent folly is documented at the <a href="http://www.ufwc.co.uk/">Unofficial Football World Championships</a> and what you can find here is merely an exercise in data visualisation based on their results.</p>
         <p>Start the visualisation to see each of the 918 matches so far. The reigning champion is shown in gold. Each challenge is shown as a link to the challenging country. If the challenge was successful the link and the new champion is shown in gold. Next to each country is displayed the number of times it has won the title.</p>
-        <span id="run"><a class="vis" id="start" href="javascript:startVis()">PLAY VISUALISATION</a><a class="vis" id="restart" href="javascript:restartVis()">CONTINUE</a></span>
-        <span id="pause"><a class="vis" href="javascript:pauseVis()">PAUSE</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="vis" id="faster" href="javascript:faster()">FASTER</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="vis" id="slower" href="javascript:slower()">SLOWER</a></span>
+        <div id="run">
+          <a class="vis" id="start" href="javascript:startVis()">PLAY VISUALISATION</a>
+          <a class="vis" id="restart" href="javascript:restartVis()">CONTINUE</a>
+        </div>
+        <div id="pause">
+          <a class="vis" href="javascript:pauseVis()">PAUSE</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="vis" id="faster" href="javascript:faster()">FASTER</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="vis" id="slower" href="javascript:slower()">SLOWER</a>
+        </div>
         <div id="matchDetails">
           <p id="matchNumber">Last Match: No. 918</p>
           <p id="matchResult">ARGENTINA 0-0 CHILE</p>
@@ -1322,7 +1327,14 @@
         }
 
         function startVis(){
+          currentGame=0;
+          for(i=0;i<teamsData.length;i++){
+              teamsData[i][1]=0;
+              $("#team"+i).text(teamsData[i][0]);
+          }
           speed = 300;
+          $("#faster").show();
+          $("#slower").hide();
           $(".team").hide();
           $(".game").hide();
           runVis = setInterval(showGames, speed);
@@ -1421,7 +1433,6 @@
           currentGame++;
           if(currentGame>=gamesData.length){
             stopVis();
-            currentGame=0;
           }
         }
 
@@ -1433,7 +1444,7 @@
 <!-- FOOTER: Requires footer.css & Open Sans font to be included -->
       <div id="barefoot-footer">
         <div id="barefoot-home-links">
-          <a href="/">Andy Barefoot</a> > Unofficial World Football Champions
+          <a href="/">Andy Barefoot</a> > World Football Champions
         </div>
         <div id="barefoot-social-links">
           <ul>
